# crossexam

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-TW.md  SECURITY.md  crossexam.py  pyproject.toml
.github/workflows/: ci.yml
adapters/: api-seat.md  claude-code-skill.md  claude-code.md  clipboard.md  codex-cli.md  gemini-cli.md  generic.md
docs/: dogfood-audit-20260704.md  getting-started.zh-TW.md  related-work.md
docs/blind-reviews/: README.md  claude-fable5-r1.md  claude-fable5-r2.md  claude-fable5-staff-depth.md  claude-opus-r1.md  claude-opus-r2.md  gemini-r1.md  gpt-r1.md  gpt-r2.md
examples/: simulated-debate.sh
tests/: test_crossexam.py
盲審多AI/: CLAUDE-FABLE5.txt  CLAUDE-OPUS4。8.txt  GEMINI.txt  GTP.txt
