[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "crossexam"
version = "0.2.0"
description = "Same question, N AIs, N answers. Let them cross-examine each other — a file-based protocol for multi-LLM CLI collaboration."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "XBX (Taiyang Software)" }]
requires-python = ">=3.9"
keywords = [
  "llm", "multi-agent", "claude-code", "codex-cli", "gemini-cli", "aider",
  "agents", "code-review", "ensemble", "debate", "blackboard", "cross-examination",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/cyberxuan-XBX/crossexam"
Issues = "https://github.com/cyberxuan-XBX/crossexam/issues"

[project.scripts]
cxam = "crossexam:main"
crossexam = "crossexam:main"

[tool.setuptools]
py-modules = ["crossexam"]
